# esp32c3_http

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
info/: install.c
main/: CMakeLists.txt
main/core/inc/: button.h  debug_func.h  defines.h  filter_sma.h  http_func.h  i2c.h  ina226.h  led_blink.h  main.h  make_data_str.h  pars_cmd.h  signal_gen.h  timer_e.h  uart.h  variables.h  web_socket.h
main/core/src/: button.cpp  debug_func.cpp  esp32c3_http.cpp  filter_sma.cpp  http_func.cpp  i2c.cpp  ina226.cpp  led_blink.cpp  main.cpp  make_data_str.cpp  pars_cmd.cpp  signal_gen.cpp  timer_e.cpp  uart.cpp  variables.cpp  web_socket.cpp
