idf_component_register(
    SRCS 
       "core/src/main.cpp" 
       "core/src/http_func.cpp"
       "core/src/led_blink.cpp"  
       "core/src/debug_func.cpp"         
       "core/src/web_socket.cpp"  
       "core/src/signal_gen.cpp"    
       "core/src/variables.cpp"   
       "core/src/i2c.cpp"  
       "core/src/ina226.cpp"    
       "core/src/timer_e.cpp"   
       "core/src/filter_sma.cpp"    
       "core/src/uart.cpp"     
       "core/src/pars_cmd.cpp" 
       "core/src/make_data_str.cpp"               
    INCLUDE_DIRS 
        "core/inc"
)
